fix: update existing password reset files to use correct endpoints
- Fix reset-password.html to call correct API endpoint
- Update signup.html to clear localStorage before password reset
- Update verify-email-otp.html with better email handling

--- a/reset-password.html
+++ b/reset-password.html
@@ -334,7 +334,7 @@
 
             if (!resetToken) {
                 alert('Invalid reset link. Please request a new password reset.');
-                window.location.href = 'forgot-password.html';
+                window.location.href = 'password-reset-request.html';
                 return;
             }
 
@@ -348,24 +348,31 @@
                 return;
             }
 
-            // Show loading state
-            resetBtn.disabled = true;
-            resetText.textContent = 'Resetting Password...';
-            resetSpinner.style.display = 'inline-block';
-
             try {
+                // Get token and email from URL
+                const urlParams = new URLSearchParams(window.location.search);
+                const resetToken = urlParams.get('token');
+                const email = urlParams.get('email');
+
+                if (!resetToken || !email) {
+                    alert('Invalid reset link. Please request a new password reset.');
+                    window.location.href = 'password-reset-request.html';
+                    return;
+                }
+
                 // Make API call to backend (auto-detect environment)
                 const API_URL = window.location.hostname === 'localhost' 
                     ? 'http://localhost:5003'
-                    : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app';
+                    : 'https://zimcrowd-backend-i8tjcuzr3-jojola.vercel.app';
                 
-                const response = await fetch(`${API_URL}/api/auth/reset-password`, {
+                const response = await fetch(`${API_URL}/api/email-auth/reset-password-email`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({
-                        resetToken: resetToken,
+                        email: email,
+                        otp: resetToken,
                         newPassword: newPassword
                     })
                 });
