--- a/signup.html
+++ b/signup.html
@@ -653,7 +653,7 @@
         // API Configuration
         const API_URL = window.location.hostname === 'localhost'
             ? 'http://localhost:5003'
-            : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app';
+            : 'https://zimcrowd-backend-i8tjcuzr3-jojola.vercel.app';
 
         let currentSignupMethod = 'email'; // Default, will be auto-detected
         let currentResetMethod = 'email';
@@ -1043,13 +1043,14 @@
 
                 if (data.success) {
                     if (currentResetMethod === 'email') {
-                        // Email reset - redirect to verification
-                        // Clear old verification email from signup
+                        // Email reset - redirect to NEW password reset flow
+                        // Clear old verificationEmail from localStorage before password reset redirect
                         localStorage.removeItem('verificationEmail');
-                        localStorage.setItem('resetEmail', email);
+                        localStorage.removeItem('resetEmail');
+                        localStorage.removeItem('tempToken');
                         showSuccess('📧 Reset code sent to email! Redirecting to verification...');
                         setTimeout(() => {
-                            window.location.href = `verify-email-otp.html?email=${encodeURIComponent(email)}&type=reset`;
+                            window.location.href = `password-reset-verify.html?email=${encodeURIComponent(email)}`;
                         }, 2000);
                     } else {
                         // Phone reset - redirect to verification
