feat: create universal forgot password page
- Delete all old email OTP and password reset pages (reset-password.html, verify-*.html, etc.)
- Create new simple forgot-password.html that accepts any email address
- Update login.html links to point to new universal forgot password page
- Simplified password reset flow: just email  API call  success message

New flow eliminates complex multi-step OTP verification and works for any registered email

--- a/login.html
+++ b/login.html
@@ -743,7 +743,7 @@
                         <input type="checkbox" id="rememberMe" name="rememberMe">
                         <label for="rememberMe" style="color: white !important;">Remember me</label>
                     </div>
-                    <a href="forgot-password-clean.html" class="forgot-password" style="color: #38e77b !important;">Forgot password?</a>
+                    <a href="forgot-password.html" class="forgot-password" style="color: #38e77b !important;">Forgot password?</a>
                 </div>
 
                 <button type="submit" class="login-btn" id="emailLoginBtn">
@@ -773,7 +773,7 @@
                         <input type="checkbox" id="phoneRememberMe" name="rememberMe">
                         <label for="phoneRememberMe" style="color: white !important;">Remember me</label>
                     </div>
-                    <a href="forgot-password-clean.html" class="forgot-password" style="color: #38e77b !important;">Forgot password?</a>
+                    <a href="forgot-password.html" class="forgot-password" style="color: #38e77b !important;">Forgot password?</a>
                 </div>
 
                 <button type="submit" class="login-btn" id="phoneLoginBtn">
