--- a/forgot-password.html
+++ b/forgot-password.html
@@ -15,12 +15,24 @@
 
         body {
             font-family: 'Space Grotesk', sans-serif;
-            background: linear-gradient(135deg, rgba(15, 23, 42, 0.9) 0%, rgba(30, 41, 59, 0.9) 100%);
+            background: url('assets/images/pexels-brett-sayles-3963829.jpg') center/cover no-repeat;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 20px;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.85) 0%, rgba(30, 41, 59, 0.85) 100%);
+            z-index: 0;
         }
 
         .container {
@@ -32,6 +44,8 @@
             max-width: 450px;
             border: 1px solid rgba(56, 231, 123, 0.3);
             box-shadow: 0 8px 32px rgba(56, 231, 123, 0.2);
+            position: relative;
+            z-index: 1;
         }
 
         .logo {
