--- a/signup.html
+++ b/signup.html
@@ -28,13 +28,25 @@
 
         body {
             font-family: 'Space Grotesk', sans-serif;
-            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            background: url('assets/images/pexels-brett-sayles-3963829.jpg') center/cover no-repeat;
             color: white;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 20px;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.85) 0%, rgba(30, 41, 59, 0.85) 100%);
+            z-index: 0;
         }
 
         .signup-container {
@@ -43,12 +55,15 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 0;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             border-radius: 24px;
             overflow: hidden;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(56, 231, 123, 0.3);
+            box-shadow: 0 8px 32px rgba(56, 231, 123, 0.2), 0 20px 60px rgba(0, 0, 0, 0.3);
+            position: relative;
+            z-index: 1;
         }
 
         .signup-branding {
@@ -139,9 +154,8 @@
             font-size: 36px;
             font-weight: 700;
             margin-bottom: 12px;
-            background: linear-gradient(135deg, #38e07b, #191A23);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: white;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             background-clip: text;
             letter-spacing: -0.5px;
             line-height: 1.2;
