--- a/verify-otp.html
+++ b/verify-otp.html
@@ -830,7 +830,7 @@
                         },
                         body: JSON.stringify({
                             identifier: contactValue,
-                            type: contactType
+                            type: verificationType || 'signup'
                         })
                     });
 
