--- a/signup.html
+++ b/signup.html
@@ -847,6 +847,7 @@
                 data = await response.json();
 
                 if (data.success) {
+                    if (contactMethod === 'email') {
                         // Email verification - redirect to OTP page
                         localStorage.setItem('tempToken', data.tempToken);
                         localStorage.setItem('verificationEmail', contact);
@@ -862,6 +863,7 @@
                         setTimeout(() => {
                             window.location.href = `verify-otp.html?phone=${encodeURIComponent(contact)}&type=signup&token=${data.tempToken}`;
                         }, 2000);
+                    }
                 } else {
                     showError(data.message || 'Registration failed. Please try again.');
                 }
