--- a/login.html
+++ b/login.html
@@ -52,13 +52,16 @@
         .login-container {
             width: 100%;
             max-width: 480px;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(25px);
-            -webkit-backdrop-filter: blur(25px);
-            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(30px);
+            -webkit-backdrop-filter: blur(30px);
+            border-radius: 24px;
             padding: 50px 40px;
-            border: 1px solid rgba(56, 231, 123, 0.2);
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(56, 231, 123, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            box-shadow: 
+                0 25px 50px rgba(0, 0, 0, 0.25),
+                0 0 0 1px rgba(255, 255, 255, 0.05),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
             position: relative;
             z-index: 1;
             text-align: center;
@@ -84,18 +87,19 @@
         }
 
         .login-header h1 {
-            color: #191A23;
+            color: rgba(255, 255, 255, 0.95);
             font-size: 32px;
             font-weight: 700;
             margin-bottom: 8px;
-            background: linear-gradient(135deg, #191A23, #374151);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.8));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .login-subtitle {
-            color: #6b7280;
+            color: rgba(255, 255, 255, 0.6);
             font-size: 16px;
             line-height: 1.5;
             font-weight: 400;
@@ -124,29 +128,33 @@
         .form-input {
             width: 100%;
             padding: 16px 20px;
-            background: #f8fafc;
-            border: 1px solid #e5e7eb;
+            background: rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.15);
             border-radius: 12px;
-            color: #191A23;
+            color: rgba(255, 255, 255, 0.9);
             font-size: 15px;
             font-family: 'Space Grotesk', sans-serif;
             font-weight: 400;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             line-height: 1.5;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
 
         .form-input:focus {
             outline: none;
-            border-color: #38e07b;
-            background: white;
+            border-color: rgba(56, 224, 123, 0.4);
+            background: rgba(255, 255, 255, 0.12);
             box-shadow: 
-                0 0 0 3px rgba(56, 224, 123, 0.1),
-                0 4px 12px rgba(56, 224, 123, 0.05);
+                0 0 0 3px rgba(56, 224, 123, 0.15),
+                0 4px 12px rgba(0, 0, 0, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
             transform: translateY(-1px);
+            color: white;
         }
 
         .form-input::placeholder {
-            color: #9ca3af;
+            color: rgba(255, 255, 255, 0.4);
         }
 
         .form-options {
@@ -170,20 +178,20 @@
 
         .remember-me label {
             font-size: 14px;
-            color: #6b7280;
+            color: rgba(255, 255, 255, 0.7);
             cursor: pointer;
         }
 
         .forgot-password {
             font-size: 14px;
-            color: #38e07b;
+            color: rgba(56, 224, 123, 0.9);
             text-decoration: none;
             font-weight: 500;
             transition: all 0.3s ease;
         }
 
         .forgot-password:hover {
-            color: #22c55e;
+            color: #4ade80;
             text-decoration: underline;
         }
 
@@ -237,7 +245,7 @@
             text-align: center;
             margin: 24px 0;
             position: relative;
-            color: #6b7280;
+            color: rgba(255, 255, 255, 0.5);
             font-size: 14px;
         }
 
@@ -248,13 +256,16 @@
             left: 0;
             right: 0;
             height: 1px;
-            background: #e5e7eb;
+            background: rgba(255, 255, 255, 0.2);
         }
 
         .divider span {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.08);
             padding: 0 12px;
             position: relative;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border-radius: 20px;
         }
 
         .signup-prompt {
@@ -271,34 +282,36 @@
         }
 
         .signup-link:hover {
-            color: #22c55e;
+            color: #4ade80;
             text-decoration: underline;
         }
 
         .app-download-prompt {
-            background: rgba(56, 224, 123, 0.05);
+            background: rgba(56, 224, 123, 0.08);
             border: 1px solid rgba(56, 224, 123, 0.15);
             border-radius: 12px;
             padding: 20px;
             margin: 20px 0;
             text-align: center;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
 
         .app-download-prompt h3 {
-            color: #191A23;
+            color: rgba(255, 255, 255, 0.9);
             margin-bottom: 8px;
             font-size: 16px;
         }
 
         .app-download-prompt p {
-            color: #6b7280;
+            color: rgba(255, 255, 255, 0.6);
             font-size: 14px;
             margin-bottom: 12px;
         }
 
         .download-btn {
-            background: rgba(56, 224, 123, 0.1);
-            color: #38e07b;
+            background: rgba(56, 224, 123, 0.15);
+            color: rgba(56, 224, 123, 0.9);
             padding: 10px 20px;
             border-radius: 8px;
             text-decoration: none;
@@ -307,23 +320,28 @@
             display: inline-block;
             transition: all 0.3s ease;
             border: 1px solid rgba(56, 224, 123, 0.2);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
 
         .download-btn:hover {
-            background: rgba(56, 224, 123, 0.2);
+            background: rgba(56, 224, 123, 0.25);
             transform: translateY(-1px);
+            color: #4ade80;
         }
 
         .error-message {
             background: rgba(239, 68, 68, 0.1);
             border: 1px solid rgba(239, 68, 68, 0.2);
-            color: #dc2626;
+            color: rgba(239, 68, 68, 0.9);
             padding: 12px 16px;
             border-radius: 8px;
             font-size: 14px;
             font-weight: 500;
             margin-bottom: 20px;
             display: none;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
         }
 
         @media (max-width: 480px) {
