Change form labels to white color for better visibility on glassmorphism background

--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
             margin-bottom: 8px;
             font-size: 14px;
             font-weight: 500;
-            color: #374151;
+            color: rgba(255, 255, 255, 0.9);
             letter-spacing: 0.3px;
         }
 
