--- a/login.html
+++ b/login.html
@@ -59,9 +59,10 @@
             padding: 50px 40px;
             border: 1px solid rgba(255, 255, 255, 0.12);
             box-shadow: 
-                0 25px 50px rgba(0, 0, 0, 0.25),
-                0 0 0 1px rgba(255, 255, 255, 0.05),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+                0 25px 50px rgba(56, 231, 123, 0.15),
+                0 0 0 1px rgba(56, 231, 123, 0.08),
+                inset 0 1px 0 rgba(255, 255, 255, 0.12),
+                0 8px 32px rgba(56, 231, 123, 0.1);
             position: relative;
             z-index: 1;
             text-align: center;
