--- a/login.html
+++ b/login.html
@@ -75,18 +75,14 @@
         }
 
         .login-logo {
-            width: 70px;
-            height: 70px;
-            margin: 0 auto 20px;
-            background: linear-gradient(135deg, #38e07b, #22c55e);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 28px;
+            font-size: 42px;
             font-weight: 700;
-            box-shadow: 0 8px 25px rgba(56, 231, 123, 0.3);
+            margin: 0 auto 20px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.8));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .login-header h1 {
@@ -359,9 +355,7 @@
             }
 
             .login-logo {
-                width: 60px;
-                height: 60px;
-                font-size: 24px;
+                font-size: 32px;
             }
         }
     </style>
@@ -369,7 +363,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <div class="login-logo">ZC</div>
+            <div class="login-logo">ZimCrowd</div>
             <h1>Welcome Back</h1>
             <p class="login-subtitle">Sign in to your ZimCrowd account</p>
         </div>
