--- a/login.html
+++ b/login.html
@@ -75,14 +75,10 @@
         }
 
         .login-logo {
-            font-size: 42px;
-            font-weight: 700;
+            width: 120px;
+            height: auto;
             margin: 0 auto 20px;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.8));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.3));
         }
 
         .login-header h1 {
@@ -355,7 +351,8 @@
             }
 
             .login-logo {
-                font-size: 32px;
+                width: 100px;
+                height: auto;
             }
         }
     </style>
@@ -363,7 +360,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <div class="login-logo">ZimCrowd</div>
+            <img src="assets/images/zimcrowd_light.png" alt="ZimCrowd" class="login-logo">
             <h1>Welcome Back</h1>
             <p class="login-subtitle">Sign in to your ZimCrowd account</p>
         </div>
